objects/NWR_Assignment_Structure__c.object
<CustomObject>
    <fields>
        <fullName>NDA_APTPS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NWR Assignment Structures</relationshipLabel>
        <relationshipName>NWR_Assignment_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_APTPS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NWR_Assignment_Structures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_APTPS_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NWR_Assignment_Structures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_APTPS_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Related Opportunity Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requestor Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NWR Assignment Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NDA_APTPS_Approver__c</columns>
        <columns>NDA_APTPS_Requestor__c</columns>
        <columns>NDA_APTPS_Account__c</columns>
        <columns>NDA_APTPS_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>James_Kwon</fullName>
        <columns>NAME</columns>
        <columns>NDA_APTPS_Approver__c</columns>
        <columns>NDA_APTPS_Requestor__c</columns>
        <columns>NDA_APTPS_Account__c</columns>
        <columns>NDA_APTPS_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NDA_APTPS_Approver__c</field>
            <operation>equals</operation>
            <value>James Kwon</value>
        </filters>
        <label>James Kwon</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NWR-{0000}</displayFormat>
        <label>NWR Assignment Structure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NWR Assignment Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>